...
      appearance.configureWithOpaqueBackground()
      navigationController?.navigationBar.scrollEdgeAppearance = appearance
    }

    tableContents = [
      Section(title: "UIKit", rows: [
        NavigationRow(text: "Use default cell types", detailText: .none, action: { [weak self] _ in
          self?.navigationController?.pushViewController(ExampleViewController(), animated: true)
        }),
        NavigationRow(text: "Use custom cell types", detailText: .none, action: { [weak self] _ in
          self?.navigationController?.pushViewController(CustomizationViewController(), animated: true)
        }),
        NavigationRow(text: "UIAppearance customization", detailText: .none, action: { [weak self] _ in
          self?.navigationController?.pushViewController(AppearanceViewController(), animated: true)
        })
      ])
...
